--- a/package.json
+++ b/package.json
@@ -9,8 +9,11 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
+    "react-modal-image": "^2.6.0",
     "react-router-dom": "^6.6.1",
     "react-scripts": "5.0.1",
+    "react-scroll-up": "^1.4.0",
+    "react-scroll-up-button": "^1.6.4",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
